First draft of the switch to controllers